fix: adds proper counters to list shorties
